index.html: added link to CV

--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
 <body>
     <header>
         <h1>Cody Austun Coleman</h1>
-        <div id="about">
-            I am currently a PhD student at Stanford.
-        </div>
+
     </header>
+    <nav id="nav">
+        <a href="static/cody_coleman_cv.pdf">Curriculum Vitae</a>
+    </nav>
+    <section id="about">
+        <h1>About</h1>
+        I am currently a PhD student at Stanford.
+    </section>
 
 </body>
 </html>
