index.html: trying to display CV from another repo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     </header>
     <nav id="nav">
-        <a href="static/cody_coleman_cv.pdf">Curriculum Vitae</a>
+        <a href="/CV/cody_coleman_cv.pdf">Curriculum Vitae</a>
     </nav>
     <section id="about">
         <h1>About</h1>
