gulpfile.js: setup basic build system

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Cody Coleman - Stanford Computer Science PhD Student</title>
+    <title>Cody Coleman - Computer Science PhD Student</title>
+    <!-- inject:css -->
+    <!-- endinject -->
 </head>
 <body>
     <header>
