gulpfile.js: minimized javascript

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,12 @@
     <!-- inject:css -->
     <link rel="stylesheet" href="css/main.css">
     <!-- endinject -->
+
 </head>
 <body>
+    <!-- inject:js -->
+    <script src="js/main.min.js"></script>
+    <!-- endinject -->
     <header>
         <h1>Cody Austun Coleman</h1>
 
