--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,8 +5,11 @@
     <title>Cody Coleman - Computer Science PhD Student</title>
     <!-- inject:css -->
     <!-- endinject -->
+
 </head>
 <body>
+    <!-- inject:js -->
+    <!-- endinject -->
     <header>
         <h1>Cody Austun Coleman</h1>
 
