--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <title>Cody Coleman - Computer Science PhD Student</title>
     <!-- inject:css -->
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="/public/css/main.css">
     <!-- endinject -->
 
 </head>
 <body>
     <!-- inject:js -->
-    <script src="js/main.min.js"></script>
+    <script src="/public/js/main.min.js"></script>
     <!-- endinject -->
     <header>
         <h1>Cody Austun Coleman</h1>
