--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,6 +5,7 @@
     <title>Cody Coleman - Computer Science PhD Student</title>
     <!-- inject:css -->
     <!-- endinject -->
+	<link rel="shortcut icon" href="about:blank">
 
 </head>
 <body>
@@ -32,7 +33,7 @@
     <div class="container theme-showcase" role="main">
     
         <div class="page-header" id="about">
-            <h1>Cody Austun Coleman</h1>
+            <h1>About</h1>
             <p>I am currently a PhD student at Stanford. My mission in graduate school is to use my passion for computer science to benefit society at large. I am particularly interested in improving education. Recent advances in machine learning have enabled a new wave of intelligent systems. Computers can handle  increasingly complex tasks. As a result, the nature of work is changing. People are performing more diverse and creative tasks. Yet many education systems have not adapted to this increasing diversity. Machine learning could be the key to adaptive education systems that keep up with the future of work. To this end, my research aims at creating intelligent systems that engage wider audiences.</p>
         </div>
     </div>
