Add picture, contact info, and publications

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -24,16 +24,115 @@
             <div class="collapse navbar-collapse" id="navbar">
                 <ul class="nav navbar-nav">
 					<li class="active"><a href="#about">About</a></li>
+					<li><a href="#publications">Publications</a></li>
                     <li><a href="/CV/cody_coleman_cv.pdf">Curriculum Vitae</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    <div class="container theme-showcase" role="main">
-        <div class="page-header" id="about">
-            <h1>About</h1>
+    <div class="container theme-showcase" role="main" id="main">
+        <div class='row'>
+            <div class="col-md-4">
+                <img src="public/img/cody_coleman.jpg" width='100%'>
+
+                <section id='contact-info'>
+                    <ul>
+                        <li>
+                            <strong>Email:</strong> cod [at] cs [dot] stanford [dot] edu
+                        </li>
+                        <li>
+                            <strong>Twitter:</strong> <a href="https://twitter.com/codyaustun">@codyaustun</a>
+                        </li>
+                        <li>
+                            <strong>Github:</strong> <a href="https://github.com/codyaustun">codyaustun</a>
+                        </li>
+                        <li>
+                            <strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/codyaustun/">www.linkedin.com/in/codyaustun</a>
+                        </li>
+                    </ul>
+                </section>
+            </div>
+            <div class="col-md-8">
+                <div id="about">
+                    <div class="page-header">
+                        <h1>About</h1>
+                    </div>
+                    <p>
+                        I am a first year Ph.D. student at Stanford University, rotating with <a href="http://www.cs.cmu.edu/~ebrun/">Emma Brunskill</a>.
+                        My research interests include machine learning and education.
+                        Recent advances in machine learning have enabled a new wave of intelligent systems.
+                        Computers can handle increasingly complex tasks.
+                        As a result, the nature of work is changing.
+                        People are performing more diverse and creative tasks.
+                        Yet many education systems have not adapted to this increasing diversity.
+                        Machine learning could be the key to adaptive education systems that keep up with the future of work.
+                        To this end, my research aims at creating intelligent systems that engage wider audiences.
+                    </p>
+                </div>
+
+                <div id="publications">
+                    <div class="page-header">
+                        <h1>Publications</h1>
+                    </div>
+
+                    <div class="pub">
+                        <div class="title">
+                            <a href="public/papers/probabilistic_use_cases.pdf">
+                                Probabilistic Use Cases: Discovering Behavioral Patterns for Predicting Certification
+                            </a>
+                        </div>
+                        <div class="authors">
+                            <span class='me'>Cody A. Coleman</span>, Daniel T. Seaton, and Isaac Chuang
+                        </div>
+                        <div class="location">
+                            In Learning@Scale 2015
+                        </div>
+                    </div>
+
+                    <div class="pub">
+                        <div class="title">
+                            <a href="public/papers/beyond_time_on_task.pdf">
+                                Beyond Time-on-Task: The Relationship between Spaced Study and Certification in MOOCs
+                            </a>
+                        </div>
+                        <div class="authors">
+                            Yohsuke R. Miyamoto, <span class='me'>Cody A. Coleman</span>, Joseph Williams, Jacob Whitehill, Sergiy Nesterko, and Justin Reich
+                        </div>
+                        <div class="location">
+                            In Journal of Learning Analytics 2015
+                        </div>
+                    </div>
+
+                    <div class="pub">
+                        <div class="title">
+                            <a href="http://er.educause.edu/articles/2015/2/enrollment-in-mitx-moocs-are-we-educating-educators">
+                                Enrollment in MITx MOOCs: Are We Educating Educators?
+                            </a>
+                        </div>
+                        <div class="authors">
+                            Dnaiel T. Seaton, <span class='me'>Cody A. Coleman</span>, Jon P. Daries, and Isaac Chuang
+                        </div>
+                        <div class="location">
+                            In EDUCAUSE Review 2015
+                        </div>
+                    </div>
+
+                    <div class="pub">
+                        <div class="title">
+                            <a href="http://www.educationaldatamining.org/EDM2015/uploads/papers/paper_112.pdf">
+                                Beyond Prediction: First Steps Toward Automatic Intervention in MOOC Student Stopout
+                            </a>
+                        </div>
+                        <div class="authors">
+                            Jacob Whitehill, Joseph Williams, Glenn Lopez, <span class='me'>Cody A. Coleman</span>, and Justin Reich
+                        </div>
+                        <div class="location">
+                            In Educational Data Mining (EDM) 2015
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-		<p>I am currently a PhD student at Stanford. My mission in graduate school is to use my passion for computer science to benefit society at large. I am particularly interested in improving education. Recent advances in machine learning have enabled a new wave of intelligent systems. Computers can handle  increasingly complex tasks. As a result, the nature of work is changing. People are performing more diverse and creative tasks. Yet many education systems have not adapted to this increasing diversity. Machine learning could be the key to adaptive education systems that keep up with the future of work. To this end, my research aims at creating intelligent systems that engage wider audiences.</p>
     </div>
 
 </body>
