Add analytics and remove nav links

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -23,8 +23,6 @@
 			</div>
             <div class="collapse navbar-collapse" id="navbar">
                 <ul class="nav navbar-nav">
-					<li class="active"><a href="#about">About</a></li>
-					<li><a href="#publications">Publications</a></li>
                     <li><a href="/CV/cody_coleman_cv.pdf">Curriculum Vitae</a></li>
                 </ul>
             </div>
@@ -53,8 +51,8 @@
                 </section>
             </div>
             <div class="col-md-8">
-                <div id="about">
-                    <div class="page-header">
+                <div>
+                    <div class="page-header" id="about">
                         <h1>About</h1>
                     </div>
                     <p>
@@ -70,8 +68,8 @@
                     </p>
                 </div>
 
-                <div id="publications">
-                    <div class="page-header">
+                <div>
+                    <div class="page-header" id="publications">
                         <h1>Publications</h1>
                     </div>
 
