--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,33 +10,19 @@
 <body>
     <!-- inject:js -->
     <!-- endinject -->
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-			<div class="navbar-header">
-			 	<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-			 	</button>
-			  	<a class="navbar-brand" href="#">Cody Austun Coleman</a>
-			</div>
-            <div class="collapse navbar-collapse" id="navbar">
-                <ul class="nav navbar-nav">
-                    <li><a href="/CV/cody_coleman_cv.pdf">Curriculum Vitae</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
     <div class="container theme-showcase" role="main" id="main">
         <div class='row'>
-            <div class="col-md-4">
+            <div class="col-md-4" id='sidebar'>
+                <h1>Cody Austun Coleman</h1>
                 <img src="public/img/cody_coleman.jpg" width='100%'>
 
                 <section id='contact-info'>
                     <ul>
                         <li>
                             <strong>Email:</strong> cod [at] cs [dot] stanford [dot] edu
+                        </li>
+                        <li>
+                            <strong>Vitals:</strong> <a href="/CV/cody_coleman_cv.pdf">CV/Resume</a>
                         </li>
                         <li>
                             <strong>Twitter:</strong> <a href="https://twitter.com/codyaustun">@codyaustun</a>
