Update about and added DAWNBench camera ready

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <section id='contact-info'>
                     <ul>
                         <li>
-                            <strong>Email:</strong> cod [at] cs [dot] stanford [dot] edu
+                            <strong>Email:</strong> cody [at] cs [dot] stanford [dot] edu
                         </li>
                         <li>
                             <strong>Vitals:</strong> <a href="/CV/cody_coleman_cv.pdf">CV/Resume</a>
@@ -44,21 +44,36 @@
                         <h1>About</h1>
                     </div>
                     <p>
-                        I am a first year Ph.D. student at Stanford University, rotating with <a href="http://www.cs.cmu.edu/~ebrun/">Emma Brunskill</a>.
-                        My research interests include machine learning and education.
-                        Recent advances in machine learning have enabled a new wave of intelligent systems.
-                        Computers can handle increasingly complex tasks.
-                        As a result, the nature of work is changing.
-                        People are performing more diverse and creative tasks.
-                        Yet many education systems have not adapted to this increasing diversity.
-                        Machine learning could be the key to adaptive education systems that keep up with the future of work.
-                        To this end, my research aims at creating intelligent systems that engage wider audiences.
+                    I am a second-year Computer Science Ph.D. student at Stanford University advised by <a href="https://cs.stanford.edu/~matei/">Matei Zaharia</a> and <a href="http://www.bailis.org/">Peter Bailis</a>.
+                    As a member of <a href="http://dawn.cs.stanford.edu/">the Stanford DAWN Project</a>, I am focused on usable machine learning that enables more than the most well-funded teams to create innovative and impactful systems.
+                    This includes reducing the cost of producing state-of-the-art models and creating novel abstractions that simplify machine learning development and deployment.
+                    </p>
+
+                    <p>
+                    Prior to starting my Ph.D. at Stanford, I worked at the intersection of machine learning and education.
+                    With the <a href="https://openlearning.mit.edu/">MIT Office of Digital Learning</a>, I created new ways of characterizing student populations, predicting student drop out, and personalizing interventions.
+                    Based on <a href="https://youtu.be/stxJMsxxxtA">my own story</a>, I believe that with the right resources, tools, and encouragement we are all capable of doing great work!
+                    To this end, my mission in graduate school is to utilize my passion for computer science and machine learning to benefit society at large, while serving as an example of success that will shape the future of our society.
                     </p>
                 </div>
 
                 <div>
                     <div class="page-header" id="publications">
                         <h1>Publications</h1>
+                    </div>
+
+                    <div class="pub">
+                        <div class="title">
+                            <a href="public/papers/nips17-dawnbench.pdf">
+                                DAWNBench: An End-to-End Deep Learning Benchmark and Competition
+                            </a>
+                        </div>
+                        <div class="authors">
+                            <span class='me'>Cody A. Coleman</span>, Deepak Narayanan, Daniel Kang, Tian Zhao, Jian Zhang, Luigi Nardi, Peter Bailis, Kunle Olukotun, Chris Ré, and Matei Zaharia
+                        </div>
+                        <div class="location">
+                            In NIPS ML Systems Workshop 2017
+                        </div>
                     </div>
 
                     <div class="pub">
