--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Cody Coleman - Computer Science PhD Student</title>
+    <title>Cody Coleman - Computer Science PhD Candidate</title>
     <!-- inject:css -->
     <link rel="stylesheet" href="public/css/main.css">
     <!-- endinject -->
@@ -44,7 +44,7 @@
                         <h1>About</h1>
                     </div>
                     <p>
-                    I am a second-year Computer Science Ph.D. student at Stanford University advised by <a href="https://cs.stanford.edu/~matei/">Matei Zaharia</a> and <a href="http://www.bailis.org/">Peter Bailis</a>.
+                    I am a second-year Computer Science Ph.D. candidate at Stanford University advised by <a href="https://cs.stanford.edu/~matei/">Matei Zaharia</a> and <a href="http://www.bailis.org/">Peter Bailis</a>.
                     As a member of <a href="http://dawn.cs.stanford.edu/">the Stanford DAWN Project</a>, I am focused on usable machine learning that enables more than the most well-funded teams to create innovative and impactful systems.
                     This includes reducing the cost of producing state-of-the-art models and creating novel abstractions that simplify machine learning development and deployment.
                     </p>
