--- a/index.html
+++ b/index.html
@@ -61,6 +61,19 @@
                     <div class="page-header" id="publications">
                         <h1>Publications</h1>
                     </div>
+                    <div class="pub">
+                        <div class="title">
+                            <a href="public/papers/mlsys_dawnbench_analysis.pdf">
+                                Analysis of the Time-To-Accuracy Metric and Entries in the DAWNBench Deep Learning Benchmark
+                            </a>
+                        </div>
+                        <div class="authors">
+                            <span class='me'>Cody A. Coleman*</span>, Daniel Kang*, Deepak Narayanan*,  Luigi Nardi, Tian Zhao, Jian Zhang, Peter Bailis, Kunle Olukotun, Chris Ré, and Matei Zaharia
+                        </div>
+                        <div class="location">
+                            In NeurIPS Systems for ML Workshop 2018
+                        </div>
+                    </div>
 
                     <div class="pub">
                         <div class="title">
