--- a/src/html/index.html
+++ b/src/html/index.html
@@ -61,15 +61,15 @@
                     </div>
                     <div class="pub">
                         <div class="title">
-                            <a href="public/papers/mlsys_dawnbench_analysis.pdf">
-                                Analysis of the Time-To-Accuracy Metric and Entries in the DAWNBench Deep Learning Benchmark
+                            <a href="public/papers/sigops_dawnbench_analysis.pdf">
+                                Analysis of DAWNBench, a Time-to-Accuracy Machine Learning Performance Benchmark
                             </a>
                         </div>
                         <div class="authors">
                             <span class='me'>Cody A. Coleman*</span>, Daniel Kang*, Deepak Narayanan*,  Luigi Nardi, Tian Zhao, Jian Zhang, Peter Bailis, Kunle Olukotun, Chris Ré, and Matei Zaharia
                         </div>
                         <div class="location">
-                            In NeurIPS Systems for ML Workshop 2018
+                            In ACM SIGOPS Operating Systems Review
                         </div>
                     </div>
 
