--- a/src/html/index.html
+++ b/src/html/index.html
@@ -61,6 +61,49 @@
                     </div>
                     <div class="pub">
                         <div class="title">
+                            <a href="https://arxiv.org/abs/1906.11829">
+                                Selection via Proxy: Efficient Data Selection for Deep Learning
+                            </a>
+                        </div>
+                        <div class="authors">
+                            <span class='me'>Cody Coleman</span>, Christopher Yeh, Stephen Mussmann, Baharan Mirzasoleiman, Peter Bailis, Percy Liang, Jure Leskovec, Matei Zaharia
+                        </div>
+                        <div class="location">
+                            arXiv Preprint 2019
+                        </div>
+                    </div>
+
+                    <div class="pub">
+                        <div class="title">
+                            <a href="https://arxiv.org/abs/1911.02549">
+                                MLPerf Inference Benchmark
+                            </a>
+                        </div>
+                        <div class="authors">
+                            Vijay Janapa Reddi, Christine Cheng, David Kanter, Peter Mattson, Guenther Schmuelling, Carole-Jean Wu, Brian Anderson, Maximilien Breughe, Mark Charlebois, William Chou, Ramesh Chukka, <span class='me'>Cody Coleman</span>, Sam Davis, Pan Deng, Greg Diamos, Jared Duke, Dave Fick, J. Scott Gardner, Itay Hubara, Sachin Idgunji, Thomas B. Jablin, Jeff Jiao, Tom St. John, Pankaj Kanwar, David Lee, Jeffery Liao, Anton Lokhmotov, Francisco Massa, Peng Meng, Paulius Micikevicius, Colin Osborne, Gennady Pekhimenko, Arun Tejusve Raghunath Rajan, Dilip Sequeira, Ashish Sirasao, Fei Sun, Hanlin Tang, Michael Thomson, Frank Wei, Ephrem Wu, Lingjie Xu, Koichi Yamada, Bing Yu, George Yuan, Aaron Zhong, Peizhao Zhang, Yuchen Zhou
+                        </div>
+                        <div class="location">
+                            arXiv Preprint 2019
+                        </div>
+                    </div>
+
+                    <div class="pub">
+                        <div class="title">
+                            <a href="https://arxiv.org/abs/1910.01500">
+                                MLPerf Training Benchmark
+                            </a>
+                        </div>
+                        <div class="authors">
+                            Peter Mattson, Christine Cheng, <span class='me'>Cody Coleman</span>, Greg Diamos, Paulius Micikevicius, David Patterson, Hanlin Tang, Gu-Yeon Wei, Peter Bailis, Victor Bittorf, David Brooks, Dehao Chen, Debojyoti Dutta, Udit Gupta, Kim Hazelwood, Andrew Hock, Xinyuan Huang, Bill Jia, Daniel Kang, David Kanter, Naveen Kumar, Jeffery Liao, Deepak Narayanan, Tayo Oguntebi, Gennady Pekhimenko, Lillian Pentecost, Vijay Janapa Reddi, Taylor Robie, Tom St. John, Carole-Jean Wu, Lingjie Xu, Cliff Young, Matei Zaharia
+                        </div>
+                        <div class="location">
+                            arXiv Preprint 2019
+                        </div>
+                    </div>
+
+
+                    <div class="pub">
+                        <div class="title">
                             <a href="public/papers/sigops_dawnbench_analysis.pdf">
                                 Analysis of DAWNBench, a Time-to-Accuracy Machine Learning Performance Benchmark
                             </a>
@@ -69,7 +112,7 @@
                             <span class='me'>Cody A. Coleman*</span>, Daniel Kang*, Deepak Narayanan*,  Luigi Nardi, Tian Zhao, Jian Zhang, Peter Bailis, Kunle Olukotun, Chris Ré, and Matei Zaharia
                         </div>
                         <div class="location">
-                            In ACM SIGOPS Operating Systems Review
+                            In ACM SIGOPS Operating Systems Review July 2019
                         </div>
                     </div>
 
