Add analysis workshop submission back

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -118,6 +118,20 @@
 
                     <div class="pub">
                         <div class="title">
+                            <a href="public/papers/mlsys_dawnbench_analysis.pdf">
+                                Analysis of the Time-To-Accuracy Metric and Entries in the DAWNBench Deep Learning Benchmark
+                            </a>
+                        </div>
+                        <div class="authors">
+                            <span class='me'>Cody A. Coleman*</span>, Daniel Kang*, Deepak Narayanan*,  Luigi Nardi, Tian Zhao, Jian Zhang, Peter Bailis, Kunle Olukotun, Chris Ré, and Matei Zaharia
+                        </div>
+                        <div class="location">
+                            In NeurIPS Systems for ML Workshop 2018
+                        </div>
+                    </div>
+
+                    <div class="pub">
+                        <div class="title">
                             <a href="public/papers/nips17-dawnbench.pdf">
                                 DAWNBench: An End-to-End Deep Learning Benchmark and Competition
                             </a>
