Update SVP to ICLR 2020

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -61,7 +61,7 @@
                     </div>
                     <div class="pub">
                         <div class="title">
-                            <a href="https://arxiv.org/abs/1906.11829">
+                            <a href="https://openreview.net/forum?id=HJg2b0VYDr">
                                 Selection via Proxy: Efficient Data Selection for Deep Learning
                             </a>
                         </div>
@@ -69,7 +69,7 @@
                             <span class='me'>Cody Coleman</span>, Christopher Yeh, Stephen Mussmann, Baharan Mirzasoleiman, Peter Bailis, Percy Liang, Jure Leskovec, Matei Zaharia
                         </div>
                         <div class="location">
-                            arXiv Preprint 2019
+                            ICLR 2020
                         </div>
                     </div>
 
