Update MLPerf Training paper acceptance

--- a/index.html
+++ b/index.html
@@ -77,6 +77,20 @@
 
                     <div class="pub">
                         <div class="title">
+                            <a href="https://arxiv.org/abs/1910.01500">
+                                MLPerf Training Benchmark
+                            </a>
+                        </div>
+                        <div class="authors">
+                            Peter Mattson, Christine Cheng, <span class='me'>Cody Coleman</span>, Greg Diamos, Paulius Micikevicius, David Patterson, Hanlin Tang, Gu-Yeon Wei, Peter Bailis, Victor Bittorf, David Brooks, Dehao Chen, Debojyoti Dutta, Udit Gupta, Kim Hazelwood, Andrew Hock, Xinyuan Huang, Bill Jia, Daniel Kang, David Kanter, Naveen Kumar, Jeffery Liao, Deepak Narayanan, Tayo Oguntebi, Gennady Pekhimenko, Lillian Pentecost, Vijay Janapa Reddi, Taylor Robie, Tom St. John, Carole-Jean Wu, Lingjie Xu, Cliff Young, Matei Zaharia
+                        </div>
+                        <div class="location">
+                            MLSys 2020
+                        </div>
+                    </div>
+
+                    <div class="pub">
+                        <div class="title">
                             <a href="https://arxiv.org/abs/1911.02549">
                                 MLPerf Inference Benchmark
                             </a>
@@ -88,21 +102,6 @@
                             arXiv Preprint 2019
                         </div>
                     </div>
-
-                    <div class="pub">
-                        <div class="title">
-                            <a href="https://arxiv.org/abs/1910.01500">
-                                MLPerf Training Benchmark
-                            </a>
-                        </div>
-                        <div class="authors">
-                            Peter Mattson, Christine Cheng, <span class='me'>Cody Coleman</span>, Greg Diamos, Paulius Micikevicius, David Patterson, Hanlin Tang, Gu-Yeon Wei, Peter Bailis, Victor Bittorf, David Brooks, Dehao Chen, Debojyoti Dutta, Udit Gupta, Kim Hazelwood, Andrew Hock, Xinyuan Huang, Bill Jia, Daniel Kang, David Kanter, Naveen Kumar, Jeffery Liao, Deepak Narayanan, Tayo Oguntebi, Gennady Pekhimenko, Lillian Pentecost, Vijay Janapa Reddi, Taylor Robie, Tom St. John, Carole-Jean Wu, Lingjie Xu, Cliff Young, Matei Zaharia
-                        </div>
-                        <div class="location">
-                            arXiv Preprint 2019
-                        </div>
-                    </div>
-
 
                     <div class="pub">
                         <div class="title">
