--- a/src/html/index.html
+++ b/src/html/index.html
@@ -69,7 +69,7 @@
                             <span class='me'>Cody Coleman</span>, Christopher Yeh, Stephen Mussmann, Baharan Mirzasoleiman, Peter Bailis, Percy Liang, Jure Leskovec, Matei Zaharia
                         </div>
                         <div class="location">
-                            In International Conference on Learning Representations (ICLR) 2020
+                            To appear in ICLR 2020
                         </div>
                     </div>
 
@@ -83,7 +83,7 @@
                             Peter Mattson, Christine Cheng, <span class='me'>Cody Coleman</span>, Greg Diamos, Paulius Micikevicius, David Patterson, Hanlin Tang, Gu-Yeon Wei, Peter Bailis, Victor Bittorf, David Brooks, Dehao Chen, Debojyoti Dutta, Udit Gupta, Kim Hazelwood, Andrew Hock, Xinyuan Huang, Bill Jia, Daniel Kang, David Kanter, Naveen Kumar, Jeffery Liao, Deepak Narayanan, Tayo Oguntebi, Gennady Pekhimenko, Lillian Pentecost, Vijay Janapa Reddi, Taylor Robie, Tom St. John, Carole-Jean Wu, Lingjie Xu, Cliff Young, Matei Zaharia
                         </div>
                         <div class="location">
-                            In Conference on Machine Learning and Systems (MLSys) 2020
+                            To appear in MLSys 2020
                         </div>
                     </div>
 
