Add IEEE MICRO paper

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -103,6 +103,18 @@
 
                     <div class="pub">
                         <div class="title">
+                                MLPerf: An Industry Standard Benchmark Suite for Machine Learning Performance
+                        </div>
+                        <div class="authors">
+                            Peter Mattson, Vijay Janapa Reddi, Christine Cheng, <span class='me'>Cody Coleman</span>, Gregory Diamos, David Kanter, Paulius Micikevicius, David Patterson, Guenther Schmuelling, Hanlin Tang, Gu-Yeon Wei, Carole-Jean Wu
+                        </div>
+                        <div class="location">
+                            To appear in IEEE MICRO
+                        </div>
+                    </div>
+
+                    <div class="pub">
+                        <div class="title">
                             <a href="public/papers/sigops_dawnbench_analysis.pdf">
                                 Analysis of DAWNBench, a Time-to-Accuracy Machine Learning Performance Benchmark
                             </a>
