Update link to IEEE MICRO paper

--- a/index.html
+++ b/index.html
@@ -77,6 +77,20 @@
 
                     <div class="pub">
                         <div class="title">
+                            <a href="https://ieeexplore.ieee.org/document/9001257">
+                                MLPerf: An Industry Standard Benchmark Suite for Machine Learning Performance
+                            </a>
+                        </div>
+                        <div class="authors">
+                            Peter Mattson, Vijay Janapa Reddi, Christine Cheng, <span class='me'>Cody Coleman</span>, Gregory Diamos, David Kanter, Paulius Micikevicius, David Patterson, Guenther Schmuelling, Hanlin Tang, Gu-Yeon Wei, Carole-Jean Wu
+                        </div>
+                        <div class="location">
+                            In IEEE MICRO
+                        </div>
+                    </div>
+
+                    <div class="pub">
+                        <div class="title">
                             <a href="https://arxiv.org/abs/1910.01500">
                                 MLPerf Training Benchmark
                             </a>
@@ -100,18 +114,6 @@
                         </div>
                         <div class="location">
                             arXiv Preprint 2019
-                        </div>
-                    </div>
-
-                    <div class="pub">
-                        <div class="title">
-                                MLPerf: An Industry Standard Benchmark Suite for Machine Learning Performance
-                        </div>
-                        <div class="authors">
-                            Peter Mattson, Vijay Janapa Reddi, Christine Cheng, <span class='me'>Cody Coleman</span>, Gregory Diamos, David Kanter, Paulius Micikevicius, David Patterson, Guenther Schmuelling, Hanlin Tang, Gu-Yeon Wei, Carole-Jean Wu
-                        </div>
-                        <div class="location">
-                            To appear in IEEE MICRO
                         </div>
                     </div>
 
