--- a/src/html/index.html
+++ b/src/html/index.html
@@ -61,6 +61,20 @@
                     </div>
                     <div class="pub">
                         <div class="title">
+                            <a href="https://arxiv.org/abs/1911.02549">
+                                MLPerf Inference Benchmark
+                            </a>
+                        </div>
+                        <div class="authors">
+                            Vijay Janapa Reddi, Christine Cheng, David Kanter, Peter Mattson, Guenther Schmuelling, Carole-Jean Wu, Brian Anderson, Maximilien Breughe, Mark Charlebois, William Chou, Ramesh Chukka, <span class='me'>Cody Coleman</span>, Sam Davis, Pan Deng, Greg Diamos, Jared Duke, Dave Fick, J. Scott Gardner, Itay Hubara, Sachin Idgunji, Thomas B. Jablin, Jeff Jiao, Tom St. John, Pankaj Kanwar, David Lee, Jeffery Liao, Anton Lokhmotov, Francisco Massa, Peng Meng, Paulius Micikevicius, Colin Osborne, Gennady Pekhimenko, Arun Tejusve Raghunath Rajan, Dilip Sequeira, Ashish Sirasao, Fei Sun, Hanlin Tang, Michael Thomson, Frank Wei, Ephrem Wu, Lingjie Xu, Koichi Yamada, Bing Yu, George Yuan, Aaron Zhong, Peizhao Zhang, Yuchen Zhou
+                        </div>
+                        <div class="location">
+                            To appear in ISCA 2020
+                        </div>
+                    </div>
+
+                    <div class="pub">
+                        <div class="title">
                             <a href="https://openreview.net/forum?id=HJg2b0VYDr">
                                 Selection via Proxy: Efficient Data Selection for Deep Learning
                             </a>
@@ -69,21 +83,21 @@
                             <span class='me'>Cody Coleman</span>, Christopher Yeh, Stephen Mussmann, Baharan Mirzasoleiman, Peter Bailis, Percy Liang, Jure Leskovec, Matei Zaharia
                         </div>
                         <div class="location">
-                            To appear in ICLR 2020
+                            In ICLR 2020
                         </div>
                     </div>
 
                     <div class="pub">
                         <div class="title">
-                            <a href="https://ieeexplore.ieee.org/document/9001257">
-                                MLPerf: An Industry Standard Benchmark Suite for Machine Learning Performance
+                            <a href="https://pml4dc.github.io/iclr2020/program/pml4dc_25.html">
+                                Selection via Proxy: Increasing the Computational Efficiency of Deep Active Learning
                             </a>
                         </div>
                         <div class="authors">
-                            Peter Mattson, Vijay Janapa Reddi, Christine Cheng, <span class='me'>Cody Coleman</span>, Gregory Diamos, David Kanter, Paulius Micikevicius, David Patterson, Guenther Schmuelling, Hanlin Tang, Gu-Yeon Wei, Carole-Jean Wu
+                            <span class='me'>Cody Coleman</span>, Christopher Yeh, Stephen Mussmann, Baharan Mirzasoleiman, Peter Bailis, Percy Liang, Jure Leskovec, Matei Zaharia
                         </div>
                         <div class="location">
-                            In IEEE MICRO
+                            In Practical ML for Developing Countries Workshop @ ICLR 2020
                         </div>
                     </div>
 
@@ -97,21 +111,21 @@
                             Peter Mattson, Christine Cheng, <span class='me'>Cody Coleman</span>, Greg Diamos, Paulius Micikevicius, David Patterson, Hanlin Tang, Gu-Yeon Wei, Peter Bailis, Victor Bittorf, David Brooks, Dehao Chen, Debojyoti Dutta, Udit Gupta, Kim Hazelwood, Andrew Hock, Xinyuan Huang, Bill Jia, Daniel Kang, David Kanter, Naveen Kumar, Jeffery Liao, Deepak Narayanan, Tayo Oguntebi, Gennady Pekhimenko, Lillian Pentecost, Vijay Janapa Reddi, Taylor Robie, Tom St. John, Carole-Jean Wu, Lingjie Xu, Cliff Young, Matei Zaharia
                         </div>
                         <div class="location">
-                            To appear in MLSys 2020
+                            In MLSys 2020
                         </div>
                     </div>
 
                     <div class="pub">
                         <div class="title">
-                            <a href="https://arxiv.org/abs/1911.02549">
-                                MLPerf Inference Benchmark
+                            <a href="https://ieeexplore.ieee.org/document/9001257">
+                                MLPerf: An Industry Standard Benchmark Suite for Machine Learning Performance
                             </a>
                         </div>
                         <div class="authors">
-                            Vijay Janapa Reddi, Christine Cheng, David Kanter, Peter Mattson, Guenther Schmuelling, Carole-Jean Wu, Brian Anderson, Maximilien Breughe, Mark Charlebois, William Chou, Ramesh Chukka, <span class='me'>Cody Coleman</span>, Sam Davis, Pan Deng, Greg Diamos, Jared Duke, Dave Fick, J. Scott Gardner, Itay Hubara, Sachin Idgunji, Thomas B. Jablin, Jeff Jiao, Tom St. John, Pankaj Kanwar, David Lee, Jeffery Liao, Anton Lokhmotov, Francisco Massa, Peng Meng, Paulius Micikevicius, Colin Osborne, Gennady Pekhimenko, Arun Tejusve Raghunath Rajan, Dilip Sequeira, Ashish Sirasao, Fei Sun, Hanlin Tang, Michael Thomson, Frank Wei, Ephrem Wu, Lingjie Xu, Koichi Yamada, Bing Yu, George Yuan, Aaron Zhong, Peizhao Zhang, Yuchen Zhou
+                            Peter Mattson, Vijay Janapa Reddi, Christine Cheng, <span class='me'>Cody Coleman</span>, Gregory Diamos, David Kanter, Paulius Micikevicius, David Patterson, Guenther Schmuelling, Hanlin Tang, Gu-Yeon Wei, Carole-Jean Wu
                         </div>
                         <div class="location">
-                            arXiv Preprint 2019
+                            In IEEE MICRO March 2020
                         </div>
                     </div>
 
