--- a/src/html/index.html
+++ b/src/html/index.html
@@ -42,16 +42,17 @@
                         <h1>About</h1>
                     </div>
                     <p>
-                    I am a fourth-year Computer Science Ph.D. candidate at Stanford University advised by <a href="https://cs.stanford.edu/~matei/">Matei Zaharia</a> and <a href="http://www.bailis.org/">Peter Bailis</a>.
-                    As a member of <a href="http://dawn.cs.stanford.edu/">the Stanford DAWN Project</a>, I am focused on usable machine learning that enables more than the most well-funded teams to create innovative and impactful systems.
-                    This includes reducing the cost of producing state-of-the-art models and creating novel abstractions that simplify machine learning development and deployment.
+                    I am a fourth-year computer science Ph.D. student at Stanford University, advised by Professors <a href="https://cs.stanford.edu/~matei/">Matei Zaharia</a> and <a href="http://www.bailis.org/">Peter Bailis</a>.
+                    My research aims to democratize machine learning by reducing the cost of producing state-of-the-art models and creating novel abstractions that simplify machine learning development and deployment.
+                    My recent work spans from performance benchmarking of hardware and software systems (i.e., <a href='https://dawn.cs.stanford.edu/benchmark/'>DAWNBench</a> and <a href='https://mlperf.org/'>MLPerf</a>) to computationally efficient methods for active learning and core-set selection. 
+                    My Ph.D. has been supported by the NSF GRFP, <a href="http://dawn.cs.stanford.edu/">the Stanford DAWN Project</a>, and <a href='https://www.openphilanthropy.org/focus/global-catastrophic-risks/potential-risks-advanced-artificial-intelligence/open-phil-ai-fellowship-2020-class'>the Open Phil AI Fellowship</a>.
                     </p>
 
                     <p>
                     Prior to starting my Ph.D. at Stanford, I worked at the intersection of machine learning and education.
                     With the <a href="https://openlearning.mit.edu/">MIT Office of Digital Learning</a>, I created new ways of characterizing student populations, predicting student drop out, and personalizing interventions.
                     Based on <a href="https://youtu.be/stxJMsxxxtA">my own story</a>, I believe that with the right resources, tools, and encouragement we are all capable of doing great work!
-                    To this end, my mission in graduate school is to utilize my passion for computer science and machine learning to benefit society at large, while serving as an example of success that will shape the future of our society.
+                    To this end, <a href="public/misc/Stanford-purpose.pdf">my mission in graduate school</a> is to utilize my passion for computer science and machine learning to benefit society at large, while serving as an example of success that will shape the future of our society.
                     </p>
                 </div>
 
