Add SEALS paper

--- a/index.html
+++ b/index.html
@@ -64,6 +64,20 @@
                     </div>
                     <div class="pub">
                         <div class="title">
+                            <a href="https://arxiv.org/abs/2007.00077">
+                                Similarity Search for Efficient Active Learning and Search of Rare Concepts
+                            </a>
+                        </div>
+                        <div class="authors">
+                            <span class='me'>Cody Coleman</span>, Edward Chou, Sean Culatana, Peter Bailis, Alexander C. Berg, Roshan Sumbaly, Matei Zaharia, I. Zeki Yalniz
+                        </div>
+                        <div class="location">
+                            arXiv Preprint 2020
+                        </div>
+                    </div>
+
+                    <div class="pub">
+                        <div class="title">
                             <a href="https://arxiv.org/abs/1911.02549">
                                 MLPerf Inference Benchmark
                             </a>
@@ -72,7 +86,7 @@
                             Vijay Janapa Reddi, Christine Cheng, David Kanter, Peter Mattson, Guenther Schmuelling, Carole-Jean Wu, Brian Anderson, Maximilien Breughe, Mark Charlebois, William Chou, Ramesh Chukka, <span class='me'>Cody Coleman</span>, Sam Davis, Pan Deng, Greg Diamos, Jared Duke, Dave Fick, J. Scott Gardner, Itay Hubara, Sachin Idgunji, Thomas B. Jablin, Jeff Jiao, Tom St. John, Pankaj Kanwar, David Lee, Jeffery Liao, Anton Lokhmotov, Francisco Massa, Peng Meng, Paulius Micikevicius, Colin Osborne, Gennady Pekhimenko, Arun Tejusve Raghunath Rajan, Dilip Sequeira, Ashish Sirasao, Fei Sun, Hanlin Tang, Michael Thomson, Frank Wei, Ephrem Wu, Lingjie Xu, Koichi Yamada, Bing Yu, George Yuan, Aaron Zhong, Peizhao Zhang, Yuchen Zhou
                         </div>
                         <div class="location">
-                            To appear in ISCA 2020
+                            In ISCA 2020
                         </div>
                     </div>
 
