--- a/src/html/index.html
+++ b/src/html/index.html
@@ -14,7 +14,7 @@
         <div class='row'>
             <div class="col-md-4" id='sidebar'>
                 <h1>Cody Austun Coleman</h1>
-                <img src="public/img/cody_coleman.jpg" width='100%'>
+                <img src="public/img/prateek_malhotra.png" width='100%'>
 
                 <section id='contact-info'>
                     <ul>
