--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class='row'>
             <div class="col-md-4" id='sidebar'>
                 <h1>Cody Austun Coleman</h1>
-                <img src="public/img/cody_coleman.jpg" width='100%'>
+                <img src="public/img/prateek_malhotra.png" width='100%'>
 
                 <section id='contact-info'>
                     <ul>
@@ -153,7 +153,7 @@
                             </a>
                         </div>
                         <div class="authors">
-                            <span class='me'>Cody A. Coleman*</span>, Daniel Kang*, Deepak Narayanan*,  Luigi Nardi, Tian Zhao, Jian Zhang, Peter Bailis, Kunle Olukotun, Chris Ré, and Matei Zaharia
+                            <span class='me'>Cody A. Coleman*</span>, Daniel Kang*, Deepak Narayanan*,  Luigi Nardi, Tian Zhao, Jian Zhang, Peter Bailis, Kunle Olukotun, Chris Ré, and Matei Zaharia
                         </div>
                         <div class="location">
                             In ACM SIGOPS Operating Systems Review July 2019
@@ -167,7 +167,7 @@
                             </a>
                         </div>
                         <div class="authors">
-                            <span class='me'>Cody A. Coleman*</span>, Daniel Kang*, Deepak Narayanan*,  Luigi Nardi, Tian Zhao, Jian Zhang, Peter Bailis, Kunle Olukotun, Chris Ré, and Matei Zaharia
+                            <span class='me'>Cody A. Coleman*</span>, Daniel Kang*, Deepak Narayanan*,  Luigi Nardi, Tian Zhao, Jian Zhang, Peter Bailis, Kunle Olukotun, Chris Ré, and Matei Zaharia
                         </div>
                         <div class="location">
                             In NeurIPS Systems for ML Workshop 2018
@@ -181,7 +181,7 @@
                             </a>
                         </div>
                         <div class="authors">
-                            <span class='me'>Cody A. Coleman</span>, Deepak Narayanan, Daniel Kang, Tian Zhao, Jian Zhang, Luigi Nardi, Peter Bailis, Kunle Olukotun, Chris Ré, and Matei Zaharia
+                            <span class='me'>Cody A. Coleman</span>, Deepak Narayanan, Daniel Kang, Tian Zhao, Jian Zhang, Luigi Nardi, Peter Bailis, Kunle Olukotun, Chris Ré, and Matei Zaharia
                         </div>
                         <div class="location">
                             In NIPS ML Systems Workshop 2017
