--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container theme-showcase" role="main" id="main">
         <div class='row'>
             <div class="col-md-4" id='sidebar'>
-                <h1>Cody Austun Coleman</h1>
+                <h1>Prateek Malhotra</h1>
                 <img src="public/img/prateek_malhotra.png" width='100%'>
 
                 <section id='contact-info'>
