--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <section id='contact-info'>
                     <ul>
                         <li>
-                            <strong>Email:</strong> cody [at] cs [dot] stanford [dot] edu
+                            <strong>Email:</strong> prateekmalhotra [at] ucla [dot] ucla [dot] edu
                         </li>
                         <li>
                             <strong>Vitals:</strong> <a href="/CV/cody_coleman_cv.pdf">CV/Resume</a>
