--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Cody Coleman - Computer Science PhD Candidate</title>
+    <title>Prateek Malhotra</title>
     <!-- inject:css -->
     <link rel="stylesheet" href="public/css/main.css">
     <!-- endinject -->
@@ -21,19 +21,19 @@
                 <section id='contact-info'>
                     <ul>
                         <li>
-                            <strong>Email:</strong> prateekmalhotra [at] ucla [dot] ucla [dot] edu
+                            <strong>Email:</strong> prateekmalhotra [at] ucla [dot] edu
                         </li>
                         <li>
-                            <strong>Vitals:</strong> <a href="/CV/cody_coleman_cv.pdf">CV/Resume</a>
+                            <strong>Vitals:</strong> <a href="/CV/Prateek_CV.pdf">CV/Resume</a>
                         </li>
                         <li>
-                            <strong>Twitter:</strong> <a href="https://twitter.com/codyaustun">@codyaustun</a>
+                            <strong>Twitter:</strong> <a href="https://twitter.com/prateek_dbst">@prateek_dbst</a>
                         </li>
                         <li>
-                            <strong>Github:</strong> <a href="https://github.com/codyaustun">codyaustun</a>
+                            <strong>Github:</strong> <a href="https://github.com/prateekm08">prateekm08</a>
                         </li>
                         <li>
-                            <strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/codyaustun/">www.linkedin.com/in/codyaustun</a>
+                            <strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/prateek-m-00a22a125/">www.linkedin.com/in/prateek-m-00a22a125</a>
                         </li>
                     </ul>
                 </section>
