--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <strong>Github:</strong> <a href="https://github.com/prateekm08">prateekm08</a>
                         </li>
                         <li>
-                            <strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/prateek-m-00a22a125/">www.linkedin.com/in/prateek-m-00a22a125</a>
+                            <strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/prateek-m-00a22a125/">prateekmalhotra</a>
                         </li>
                     </ul>
                 </section>
