--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                             <strong>Email:</strong> prateekmalhotra [at] ucla [dot] edu
                         </li>
                         <li>
-                            <strong>Vitals:</strong> <a href="/CV/Prateek_CV.pdf">CV/Resume</a>
+                            <strong>Vitals:</strong> <a href="Prateek_CV.pdf">CV/Resume</a>
                         </li>
                         <li>
                             <strong>Twitter:</strong> <a href="https://twitter.com/prateek_dbst">@prateek_dbst</a>
